add Beta Class to active house section

--- a/home.html
+++ b/home.html
@@ -9,7 +9,8 @@
         integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <link rel="stylesheet" href="css/app.css">
     <title>OSU Lambdas</title>
-    <link rel="shortcut icon" type="image/jpg" href="https://res.cloudinary.com/okstate-lambdas/image/upload/v1639907232/General/lpecrest_bhd2ts.png"/>
+    <link rel="shortcut icon" type="image/jpg"
+        href="https://res.cloudinary.com/okstate-lambdas/image/upload/v1639907232/General/lpecrest_bhd2ts.png" />
     <meta name="description" content="Oklahoma State University Lambda Phi Epsilon Official Website">
 </head>
 
@@ -30,7 +31,7 @@
                 <li class="nav-item mr-5">
                     <a class="nav-link menu" href="#showcase">Home</a>
                 </li>
-                
+
                 <!-- <li class="nav-item mx-5 d-xl-none">
                     <a class="nav-link menu" href="#rush-vid">Rush</a>
                 </li> -->
@@ -97,7 +98,7 @@
         </video>
     </section> -->
 
-   <!-- <section id="rush-vid">
+    <!-- <section id="rush-vid">
         <div class="container-fluid pt-1">
             <video class="video" width="100%" height="auto" poster="" controls autoplay muted loop>
                 <source
@@ -108,7 +109,7 @@
     </section> -->
 
 
-   <!-- <section id="rush-lambdas" class="d-flex flex-column align-items-center why-lambdas">
+    <!-- <section id="rush-lambdas" class="d-flex flex-column align-items-center why-lambdas">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 text-center mb-4">
@@ -227,7 +228,7 @@
                                         Student Association. In
                                         addition,
                                         I have been given the opportunity to meet some amazing brothers through this
-                                        organization and I hope to befriend more brothers. 
+                                        organization and I hope to befriend more brothers.
                                         a litto."</p>
                                     <footer class="footer text-center">#4 Leon Kien</footer>
                                 </blockquote>
@@ -318,19 +319,35 @@
                             </div>
                             <div class="carousel-item mb-5">
                                 <blockquote class="blockquote">
-                                    <p class="text-center mx-md-5 ">"I feel as though things lined up, I’m a firm believer that things happen for a reason. I was a week away from joining the fire academy in OKC, but I decided to go to college and do something that’s not common where I come from. Coming in, I had no intent to join a fraternity, it didn’t really appeal to me. Things changed as I started to get to know the guys, their goals and ambitions. 11 amazing trailblazers that had no means of stopping. I knew this was right for me, everything I wanted to achieve, I knew this would help me get there. I’m grateful and blessed to be apart of something bigger than myself, and the best brotherhood."</p>
+                                    <p class="text-center mx-md-5 ">"I feel as though things lined up, I’m a firm
+                                        believer that things happen for a reason. I was a week away from joining the
+                                        fire academy in OKC, but I decided to go to college and do something that’s not
+                                        common where I come from. Coming in, I had no intent to join a fraternity, it
+                                        didn’t really appeal to me. Things changed as I started to get to know the guys,
+                                        their goals and ambitions. 11 amazing trailblazers that had no means of
+                                        stopping. I knew this was right for me, everything I wanted to achieve, I knew
+                                        this would help me get there. I’m grateful and blessed to be apart of something
+                                        bigger than myself, and the best brotherhood."</p>
                                     <footer class="footer text-center">#12 Emmanuel Kaniatobe</footer>
                                 </blockquote>
                             </div>
                             <div class="carousel-item mb-5">
                                 <blockquote class="blockquote">
-                                    <p class="text-center mx-md-5 ">"I really wasn’t expecting to join a fraternity at all prior to starting the year so this was pretty surprising for both me and those who know me. But so far I’d say that this is one of the best decisions I’ve ever made and I’ve met a ton of new people that I can really vibe with which I probably wouldn’t have met if I hadn’t joined and I’ve been able to find out more about myself since joining."</p>
+                                    <p class="text-center mx-md-5 ">"I really wasn’t expecting to join a fraternity at
+                                        all prior to starting the year so this was pretty surprising for both me and
+                                        those who know me. But so far I’d say that this is one of the best decisions
+                                        I’ve ever made and I’ve met a ton of new people that I can really vibe with
+                                        which I probably wouldn’t have met if I hadn’t joined and I’ve been able to find
+                                        out more about myself since joining."</p>
                                     <footer class="footer text-center">#13 Kang Khai</footer>
                                 </blockquote>
                             </div>
                             <div class="carousel-item mb-5">
                                 <blockquote class="blockquote">
-                                    <p class="text-center mx-md-5 ">"Initially, I just had the intents of meeting new Asians because I never knew many growing up. Next thing I know, I’m getting to know the Lambdas and what they stand for, which inspired me to strive to join them"</p>
+                                    <p class="text-center mx-md-5 ">"Initially, I just had the intents of meeting new
+                                        Asians because I never knew many growing up. Next thing I know, I’m getting to
+                                        know the Lambdas and what they stand for, which inspired me to strive to join
+                                        them"</p>
                                     <footer class="footer text-center">#14 Adam Leicht</footer>
                                 </blockquote>
                             </div>
@@ -482,38 +499,10 @@
                                         <div class="content">
                                             <div class="content-overlay"></div>
                                             <img class="content-image"
-                                                src="https://res.cloudinary.com/okstate-lambdas/image/upload/v1629918328/Zach_cfrgsj.jpg"
-                                                alt="" width="400">
-                                            <div class="content-details fadeIn-bottom text-white">
-                                                <h3 class="content-title">#8 Zach "Shikamaru" Montebon</h3>
-
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-4 col-md-4 col-lg-3 text-center m-3">
-                                        <div class="content">
-                                            <div class="content-overlay"></div>
-                                            <img class="content-image"
                                                 src="https://res.cloudinary.com/okstate-lambdas/image/upload/v1629918312/Austin2_tliama.jpg"
                                                 alt="" width="400">
                                             <div class="content-details fadeIn-bottom text-white">
                                                 <h3 class="content-title">#9 Austin "Insomnia" Nguyen</h3>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                            </div>
-                            <div class="carousel-item">
-                                <div class="row mt-3 pb-5 d-flex flex-row justify-content-center">
-                                    <div class="col-4 col-md-4 col-lg-3 text-center m-3">
-                                        <div class="content">
-                                            <div class="content-overlay"></div>
-                                            <img class="content-image"
-                                                src="https://res.cloudinary.com/okstate-lambdas/image/upload/v1629918312/Brandon_gtuqd7.jpg"
-                                                alt="" width="400">
-                                            <div class="content-details fadeIn-bottom text-white">
-                                                <h3 class="content-title">#11 Brandon "Rafi" Pham</h3>
                                             </div>
                                         </div>
                                     </div>
@@ -528,6 +517,10 @@
                                             </div>
                                         </div>
                                     </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="row mt-3 pb-5 d-flex flex-row justify-content-center">
                                     <div class="col-4 col-md-4 col-lg-3 text-center m-3">
                                         <div class="content">
                                             <div class="content-overlay"></div>
@@ -539,10 +532,6 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <div class="row mt-3 pb-5 d-flex flex-row justify-content-center">
                                     <div class="col-4 col-md-4 col-lg-3 text-center m-3">
                                         <div class="content">
                                             <div class="content-overlay"></div>
@@ -551,6 +540,43 @@
                                                 alt="" width="400">
                                             <div class="content-details fadeIn-bottom text-white">
                                                 <h3 class="content-title">#14 Adam "Vamp" Leicht</h3>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-4 col-md-4 col-lg-3 text-center m-3">
+                                        <div class="content">
+                                            <div class="content-overlay"></div>
+                                            <img class="content-image"
+                                                src="https://res.cloudinary.com/okstate-lambdas/image/upload/v1653181602/Beta%20Class/jimmy_neutron_lpptxs.jpg"
+                                                alt="" width="400">
+                                            <div class="content-details fadeIn-bottom text-white">
+                                                <h3 class="content-title">#15 Aaron "Jimmy Neutron" Chambers</h3>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="row mt-3 pb-5 d-flex flex-row justify-content-center">
+                                    <div class="col-4 col-md-4 col-lg-3 text-center m-3">
+                                        <div class="content">
+                                            <div class="content-overlay"></div>
+                                            <img class="content-image"
+                                                src="https://res.cloudinary.com/okstate-lambdas/image/upload/v1653181598/Beta%20Class/kermit_zhd7fo.jpg"
+                                                alt="" width="400">
+                                            <div class="content-details fadeIn-bottom text-white">
+                                                <h3 class="content-title">#16 Dimitri "Kermit" Moua</h3>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-4 col-md-4 col-lg-3 text-center m-3">
+                                        <div class="content">
+                                            <div class="content-overlay"></div>
+                                            <img class="content-image"
+                                                src="https://res.cloudinary.com/okstate-lambdas/image/upload/v1653181594/Beta%20Class/broke_n_sexy_sadkjr.jpg"
+                                                alt="" width="400">
+                                            <div class="content-details fadeIn-bottom text-white">
+                                                <h3 class="content-title">#17 Pasfu "Broke N Sexy" Vang</h3>
                                             </div>
                                         </div>
                                     </div>
@@ -1165,16 +1191,16 @@
                         </div>
                     </div>
 
-            </div>
+                </div>
 
-            <div class="row back-button">
-                <div class="col-12 d-flex justify-content-end " id="button">
-                    <a href="#showcase" class="btn btn-secondary text-white mb-3 ">
-                        <i class="fas fa-chevron-up"></i>
-                    </a>
+                <div class="row back-button">
+                    <div class="col-12 d-flex justify-content-end " id="button">
+                        <a href="#showcase" class="btn btn-secondary text-white mb-3 ">
+                            <i class="fas fa-chevron-up"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
-        </div>
 
 
     </section>
