add Beta Class to active house mobile version

--- a/home.html
+++ b/home.html
@@ -609,6 +609,7 @@
                             <li data-target="#active-house-carousel-small" data-slide-to="10" class="bg-info"></li>
                             <li data-target="#active-house-carousel-small" data-slide-to="11" class="bg-info"></li>
                             <li data-target="#active-house-carousel-small" data-slide-to="12" class="bg-info"></li>
+                            <li data-target="#active-house-carousel-small" data-slide-to="13" class="bg-info"></li>
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
@@ -730,43 +731,10 @@
                                         <div class="content">
                                             <div class="content-overlay"></div>
                                             <img class="content-image"
-                                                src="https://res.cloudinary.com/okstate-lambdas/image/upload/v1629918328/Zach_cfrgsj.jpg"
-                                                alt="" width="400">
-                                            <div class="content-details fadeIn-bottom text-white">
-                                                <h3 class="content-title">#8 Zach "Shikamaru" Montebon</h3>
-
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                            </div>
-                            <div class="carousel-item">
-                                <div class="row mt-2 pb-5 d-flex flex-row justify-content-center">
-                                    <div class="text-center m-3">
-                                        <div class="content">
-                                            <div class="content-overlay"></div>
-                                            <img class="content-image"
                                                 src="https://res.cloudinary.com/okstate-lambdas/image/upload/v1629918312/Austin2_tliama.jpg"
                                                 alt="" width="400">
                                             <div class="content-details fadeIn-bottom text-white">
                                                 <h3 class="content-title">#9 Austin "Insomnia" Nguyen</h3>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                            </div>
-                            <div class="carousel-item">
-                                <div class="row mt-2 pb-5 d-flex flex-row justify-content-center">
-                                    <div class="text-center m-3">
-                                        <div class="content">
-                                            <div class="content-overlay"></div>
-                                            <img class="content-image"
-                                                src="https://res.cloudinary.com/okstate-lambdas/image/upload/v1629918312/Brandon_gtuqd7.jpg"
-                                                alt="" width="400">
-                                            <div class="content-details fadeIn-bottom text-white">
-                                                <h3 class="content-title">#11 Brandon "Rafi" Pham</h3>
                                             </div>
                                         </div>
                                     </div>
@@ -815,6 +783,54 @@
                                                 alt="" width="400">
                                             <div class="content-details fadeIn-bottom text-white">
                                                 <h3 class="content-title">#14 Adam "Vamp" Leicht</h3>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                            <div class="carousel-item">
+                                <div class="row mt-2 pb-5 d-flex flex-row justify-content-center">
+                                    <div class="text-center m-3">
+                                        <div class="content">
+                                            <div class="content-overlay"></div>
+                                            <img class="content-image"
+                                                src="https://res.cloudinary.com/okstate-lambdas/image/upload/v1653181602/Beta%20Class/jimmy_neutron_lpptxs.jpg"
+                                                alt="" width="400">
+                                            <div class="content-details fadeIn-bottom text-white">
+                                                <h3 class="content-title">#15 Aaron "Jimmy Neutron" Chambers</h3>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                            <div class="carousel-item">
+                                <div class="row mt-2 pb-5 d-flex flex-row justify-content-center">
+                                    <div class="text-center m-3">
+                                        <div class="content">
+                                            <div class="content-overlay"></div>
+                                            <img class="content-image"
+                                                src="https://res.cloudinary.com/okstate-lambdas/image/upload/v1653181598/Beta%20Class/kermit_zhd7fo.jpg"
+                                                alt="" width="400">
+                                            <div class="content-details fadeIn-bottom text-white">
+                                                <h3 class="content-title">#16 Dimitri "Kermit" Moua</h3>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                            <div class="carousel-item">
+                                <div class="row mt-2 pb-5 d-flex flex-row justify-content-center">
+                                    <div class="text-center m-3">
+                                        <div class="content">
+                                            <div class="content-overlay"></div>
+                                            <img class="content-image"
+                                                src="https://res.cloudinary.com/okstate-lambdas/image/upload/v1653181594/Beta%20Class/broke_n_sexy_sadkjr.jpg"
+                                                alt="" width="400">
+                                            <div class="content-details fadeIn-bottom text-white">
+                                                <h3 class="content-title">#17 Pasfu "Broke N Sexy" Vang</h3>
                                             </div>
                                         </div>
                                     </div>
