make background overlay darker on Chapter Roster section

--- a/home.html
+++ b/home.html
@@ -1126,6 +1126,9 @@
                         <a class="nav-link btn btn-outline-info border-info active-button shadow-none mx-1 tab-link"
                             data-toggle="tab" href="#alpha-roster">Alpha</a>
 
+                        <a class="nav-link btn btn-outline-info border-info active-button shadow-none mx-1 tab-link"
+                            data-toggle="tab" href="#beta-roster">Beta</a>
+
                     </div>
                 </div>
             </div>
@@ -1201,6 +1204,40 @@
                                 <div class="roster">#12 Emmanuel "Chief" Kaniatobe</div>
                                 <div class="roster">#13 Kang "KING SAVAGE" Khai</div>
                                 <div class="roster">#14 Adam "Vamp" Leicht</div>
+                                </p>
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="tab-pane fade show" id="beta-roster" role="tabpanel">\
+                    <div class="container">
+                        <div class="row d-flex justify-content-center">
+                            <div class="col-12 d-flex">
+                                <div class="content">
+                                    <div class="content-overlay"></div>
+                                    <img class="content-image img-fluid"
+                                        src="https://res.cloudinary.com/okstate-lambdas/image/upload/v1653181610/Beta%20Class/ballistic_betas_wpfx0r.jpg"
+                                        alt="">
+                                    <div class="content-details fadeIn-bottom text-white">
+                                        <h3 class="content-title">Ballistic Betas</h3>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 ml-xl-5 pl-xl-5">
+                                <div class="roster">New Member Educator: #3 Ali “Poundcake”
+                                    Hussain
+                                </div>
+                            </div>
+
+                            <div class="col-12 d-flex flex-column align-items-center">
+                                <p>
+                                    <br>
+                                <div class="roster">#15 Aaron "Jimmy Neutron" Chambers</div>
+                                <div class="roster">#16 Dimitri "Kermit" Moua</div>
+                                <div class="roster">#17 Pasfu "Broke N Sexy" Vang</div>
                                 </p>
                             </div>
 
