change why lambdas photo and take out rush website link

--- a/home.html
+++ b/home.html
@@ -48,9 +48,9 @@
                 <li class="nav-item mx-5">
                     <a class="nav-link menu" href="#footer">Contact</a>
                 </li>
-                <li class="nav-item mx-5 d-none d-xl-block">
+                <!-- <li class="nav-item mx-5 d-none d-xl-block">
                     <a class="nav-link menu" href="rush.html">Rush</a>
-                </li>
+                </li> -->
                 <!-- <li class="nav-item mx-5">
                     <a class="nav-link menu disabled" href="">About Us</a>
                 </li>
@@ -163,7 +163,7 @@
                     <div class="head-border mb-3"></div>
                 </div>
                 <div class="col-xl-6 my-3">
-                    <img src="https://res.cloudinary.com/okstate-lambdas/image/upload/v1629919129/why-lambdas-corrected_ptogqn.jpg"
+                    <img src="https://res.cloudinary.com/okstate-lambdas/image/upload/v1653182674/Alpha/why-lambdas_cprqq6.jpg"
                         class="img-fluid" id="why-lambdas-img" alt="">
 
                 </div>
