add beta class why lambda quotes

--- a/home.html
+++ b/home.html
@@ -187,6 +187,7 @@
                             <li data-target="#carouselExampleIndicators" data-slide-to="10" class="bg-info"></li>
                             <li data-target="#carouselExampleIndicators" data-slide-to="11" class="bg-info"></li>
                             <li data-target="#carouselExampleIndicators" data-slide-to="12" class="bg-info"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="13" class="bg-info"></li>
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active mb-5">
@@ -282,17 +283,6 @@
                             </div>
                             <div class="carousel-item mb-5">
                                 <blockquote class="blockquote">
-                                    <p class="text-center mx-md-5 ">"Chartering the first Asian-interest fraternity at
-                                        Oklahoma State was definitely not one of my original goals going into college.
-                                        Only when I truly realized how much change that my brothers and I could make on
-                                        campus was when I decided that I was dedicated to the chartering of Lambdas.
-                                        Once I was set in my goals and mindset, I was ready to take it all on and stand
-                                        up and work for what I believe in in order to make that change."</p>
-                                    <footer class="footer text-center">#8 Zach Montebon</footer>
-                                </blockquote>
-                            </div>
-                            <div class="carousel-item mb-5">
-                                <blockquote class="blockquote">
                                     <p class="text-center mx-md-5 ">"Coming into Oklahoma State University, I knew the
                                         representation for Asians on campus was lacking. I did my best to encourage
                                         growth in the community through leadership positions with many organizations on
@@ -303,18 +293,6 @@
                                         grow and excel.
                                         "</p>
                                     <footer class="footer text-center">#9 Austin Nguyen</footer>
-                                </blockquote>
-                            </div>
-                            <div class="carousel-item mb-5">
-                                <blockquote class="blockquote">
-                                    <p class="text-center mx-md-5 ">"Coming from a place before college
-                                        where the asian demographic was very prominent, I could clearly see the lack of
-                                        asian diversity at OSU, even after being involved with the asian community on
-                                        campus. On top of this, I wished to foster leadership amongst the asian
-                                        community and reinvent the way we interact with other minorities alike.
-                                        Together, we set a goal to cultivate leadership, increase asian awareness, and
-                                        pave the way for the future of a welcoming brotherhood."</p>
-                                    <footer class="footer text-center">#11 Brandon Pham</footer>
                                 </blockquote>
                             </div>
                             <div class="carousel-item mb-5">
@@ -349,6 +327,40 @@
                                         know the Lambdas and what they stand for, which inspired me to strive to join
                                         them"</p>
                                     <footer class="footer text-center">#14 Adam Leicht</footer>
+                                </blockquote>
+                            </div>
+                            <div class="carousel-item mb-5">
+                                <blockquote class="blockquote">
+                                    <p class="text-center mx-md-5 ">“I chose Lambdas because of the people, in short.
+                                        During my first semester on campus, I interacted with plenty of people that I
+                                        rarely speak to now, and I found that lack of consistency in relationships kind
+                                        of sad. Lambdas were just a bit different to me, though, inviting me to events
+                                        and always greeting me when they saw me. I’m very much a person of intuition and
+                                        my intuition told me that the brothers of Lambda Phi Epsilon were the best fit
+                                        for me if I ever were to ever join a Fraternity. So far… I’ve only been proven
+                                        right.”</p>
+                                    <footer class="footer text-center">#15 Aaron Chambers</footer>
+                                </blockquote>
+                            </div>
+                            <div class="carousel-item mb-5">
+                                <blockquote class="blockquote">
+                                    <p class="text-center mx-md-5 ">“I was introduced to lambdas indirectly during my
+                                        cousins wedding, and they were doing their chants. I also never thought there
+                                        were Asian fraternities but once I heard it was an Asian-interest fraternity, I
+                                        knew it was something I wanted to belong to and to achieve. Now that I've
+                                        crossed,
+                                        I have a family on campus.”</p>
+                                    <footer class="footer text-center">#16 Dimitri Moua</footer>
+                                </blockquote>
+                            </div>
+                            <div class="carousel-item mb-5">
+                                <blockquote class="blockquote">
+                                    <p class="text-center mx-md-5 ">“I wanted to join because I wanted a change of
+                                        pace. I was at my lowest last semester and I wanted to do something different.
+                                        So I decided to rush this fraternity so I can make connections and become
+                                        someone
+                                        who I can count on.”</p>
+                                    <footer class="footer text-center">#17 Pasfu “Broke N Sexy” Vang</footer>
                                 </blockquote>
                             </div>
                         </div>
